--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.91'
+generated_by: 'Module::Install version 0.94'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,10 +21,11 @@ no_index:
 provides:
   DateTime::Format::Sybase:
     file: lib/DateTime/Format/Sybase.pm
-    version: 0.02
+    version: 0.03
 requires:
   DateTime: 0
   DateTime::Format::Strptime: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.02
+  repository: git://github.com/rkitover/datetime-format-sybase.git
+version: 0.03
