--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,7 @@
 ---
 abstract: 'Parse and format Sybase datetimes'
 author:
+  - 'Rafael Kitover, C<< <rkitover at cpan.org> >>'
   - 'Rafael Kitover <rkitover@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
@@ -8,7 +9,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.94'
+generated_by: 'Module::Install version 1.01'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,11 +22,11 @@ no_index:
 provides:
   DateTime::Format::Sybase:
     file: lib/DateTime/Format/Sybase.pm
-    version: 0.03
+    version: 0.04
 requires:
   DateTime: 0
   DateTime::Format::Strptime: 0
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/rkitover/datetime-format-sybase.git
-version: 0.03
+version: 0.04
